--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
     "node-forge": "0.10.0",
+    "node-notifier": "8.0.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "object-path": "0.11.5",
